--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
   <meta property="og:type" content="website">
   <meta property="og:image" content="images/TopNotch_Main2.png">
   <meta property="og:url" content="https://top-notch-solutions.com">
-
   <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" href="images/favicon.ico">
   <title>Top Notch Virtual Assistance</title>
 </head>
+
 <body>
-  <header style="text-align: center; background: linear-gradient(to right, #0f1d5e, #1c2d91); padding: 2rem 1rem;">
+
+  <header class="header-centered">
     <img src="images/TopNotch_Main2.png" alt="Top Notch Logo" class="main-logo">
   </header>
 
@@ -28,36 +29,37 @@
       <div class="service-card">
         <img src="images/executive-icon.png" alt="Executive Assistance Icon" class="service-icon">
         <div class="service-title">Executive Assistance</div>
-        <p class="service-description">Efficient daily operations, professional correspondence, and administrative organization.</p>
+        <p class="service-description">
+          Efficient daily operations, professional correspondence, and administrative organization.
+        </p>
         <a href="executive-assistance.html" class="learn-more">Learn more</a>
       </div>
 
       <div class="service-card">
         <img src="images/customer-icon.png" alt="Customer Service Icon" class="service-icon">
         <div class="service-title">Customer Service</div>
-        <p class="service-description">Client engagement, service coordination, and proactive problem-solving.</p>
+        <p class="service-description">
+          Client engagement, service coordination, and proactive problem-solving.
+        </p>
         <a href="CustomerAssist.html" class="learn-more">Learn more</a>
       </div>
     </section>
-  </main>
-</body>
-</html>
 
-  <section id="testimonials">
-    <h2>What Our Clients Say</h2>
-    <div class="testimonial">
-      <p>“Top Notch Virtual Assistance helped me take control of my schedule — truly a game-changer!”</p>
-      <h4>- Sarah D., Small Business Owner</h4>
-    </div>
-    <div class="testimonial">
-      <p>“Excellent communication and reliable service. I highly recommend them!”</p>
-      <h4>- Mike L., Marketing Director</h4>
-    </div>
-    <div class="testimonial">
-      <p>“Their marketing support and quick turnaround helped us launch faster than we imagined.”</p>
-      <h4>- Lisa B., Startup Co-Founder</h4>
-    </div>
-  </section>
+    <section id="testimonials">
+      <h2>What Our Clients Say</h2>
+      <div class="testimonial">
+        <p>“Top Notch Virtual Assistance helped me take control of my schedule — truly a game-changer!”</p>
+        <h4>- Sarah D., Small Business Owner</h4>
+      </div>
+      <div class="testimonial">
+        <p>“Excellent communication and reliable service. I highly recommend them!”</p>
+        <h4>- Mike L., Marketing Director</h4>
+      </div>
+      <div class="testimonial">
+        <p>“Their marketing support and quick turnaround helped us launch faster than we imagined.”</p>
+        <h4>- Lisa B., Startup Co-Founder</h4>
+      </div>
+    </section>
 
     <section id="contact" class="contact-section">
       <h2>Contact Us</h2>
@@ -79,5 +81,6 @@
       <a href="https://linkedin.com/company/topnotchva" target="_blank">LinkedIn</a>
     </div>
   </footer>
+
 </body>
 </html>
