--- a/index.html
+++ b/index.html
@@ -18,32 +18,35 @@
 
 <body>
 
-  <header class="header-centered">
-    <img src="images/TopNotch_Main2.png" alt="Top Notch Logo" class="main-logo">
-  </header>
+	<section class="services-section">
+	  <div class="service-card">
+		<img src="images/executive-assistance.png" alt="Executive Assistance Icon" class="service-icon">
+		<div class="service-title">Executive Assistance</div>
+		<p class="service-description">
+		  Efficient daily operations, professional correspondence, and administrative organization.
+		</p>
+		<a href="executive-assistance.html" class="learn-more">Learn more</a>
+	  </div>
 
-  <main>
-    <h2 style="text-align: center; margin-top: 2rem; color: #222;">Our Services</h2>
+	  <div class="service-card">
+		<img src="images/CustomerAssist.png" alt="Customer Service Icon" class="service-icon">
+		<div class="service-title">Customer Service</div>
+		<p class="service-description">
+		  Client engagement, service coordination, and proactive problem-solving.
+		</p>
+		<a href="CustomerAssist.html" class="learn-more">Learn more</a>
+	  </div>
 
-    <section class="services-section">
-      <div class="service-card">
-        <img src="images/executive-icon.png" alt="Executive Assistance Icon" class="service-icon">
-        <div class="service-title">Executive Assistance</div>
-        <p class="service-description">
-          Efficient daily operations, professional correspondence, and administrative organization.
-        </p>
-        <a href="executive-assistance.html" class="learn-more">Learn more</a>
-      </div>
+	  <div class="service-card">
+		<img src="images/marketing.png" alt="Marketing Support Icon" class="service-icon">
+		<div class="service-title">Marketing Support</div>
+		<p class="service-description">
+		  Social media, email campaigns, content creation, and lead generation support tailored to your brand.
+		</p>
+		<a href="marketing-support.html" class="learn-more">Learn more</a>
+	  </div>
+	</section>
 
-      <div class="service-card">
-        <img src="images/customer-icon.png" alt="Customer Service Icon" class="service-icon">
-        <div class="service-title">Customer Service</div>
-        <p class="service-description">
-          Client engagement, service coordination, and proactive problem-solving.
-        </p>
-        <a href="CustomerAssist.html" class="learn-more">Learn more</a>
-      </div>
-    </section>
 
     <section id="testimonials">
       <h2>What Our Clients Say</h2>
