updated all pages and styles

--- a/customer-service.html
+++ b/customer-service.html
@@ -3,41 +3,32 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Top Notch Virtual Assistance provides responsive customer service support including live chat, email handling, and CRM follow-ups.">
-  <meta name="keywords" content="customer service virtual assistant, remote support, help desk, client care, CRM agents">
-  <meta name="author" content="Top Notch Solutions" />
-  <meta property="og:title" content="Customer Service Support | Top Notch VA" />
-  <meta property="og:description" content="Live chat and email-based virtual support for your growing business." />
-  <meta property="og:type" content="website" />
-  <meta property="og:image" content="images/TopNotch_Main2.png" />
-  <meta property="og:url" content="https://top-notch-solutions.com/customer.html" />
+  <meta name="description" content="Customer service virtual assistants to support email, chat, CRM, order issues, and customer satisfaction follow-ups.">
+  <meta name="keywords" content="customer service VA, live chat support, remote help desk, email customer service, CRM assistant, client care">
+  <meta name="author" content="Top Notch Virtual Assistance" />
+  <meta property="og:title" content="Customer Service Virtual Assistants | Top Notch VA" />
+  <meta property="og:description" content="Friendly, fast, and professional virtual support that keeps your customers happy and loyal.">
+  <meta property="og:image" content="images/CustomerAssist.png" />
+  <meta property="og:url" content="https://top-notch-solutions.com/CustomerAssist.html" />
   <link rel="stylesheet" href="css/styles.css" />
-  <link rel="icon" href="favicon.ico" type="image/x-icon" />
-  <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
-  <title>Customer Support | Top Notch Solutions</title>
+  <link rel="icon" href="images/favicon.ico" />
+  <title>Customer Service | Top Notch Virtual Assistance</title>
 </head>
 <body>
-  <header>
+  <header class="header-centered">
     <img src="images/TopNotch_Main2.png" alt="Top Notch Logo" class="main-logo" />
-    <nav class="topnav">
-      <a href="index.html">Home</a>
-      <a href="executive.html">Executive Assistance</a>
-      <a href="customer.html">Customer Service</a>
-      <a href="marketing.html">Marketing Support</a>
-    </nav>
   </header>
-  <main>
-    <section class="services">
-      <h3>Customer Service</h3>
-      <p>We deliver timely, friendly, and brand-aligned customer service on your behalf—from responding to customer inquiries to managing CRM workflows.</p>
-      <ul>
-        <li>Live Chat & Email Support</li>
-        <li>Phone Support & Callback Handling</li>
-        <li>Ticketing System Management</li>
-        <li>Returns, Tracking, and Orders</li>
-        <li>Review & Feedback Collection</li>
-      </ul>
-    </section>
+  <main class="services">
+    <h2>Virtual Customer Service Support</h2>
+    <p>Deliver five-star customer experiences at scale with our friendly and professional customer service virtual assistants.</p>
+    <p>We represent your brand with empathy, urgency, and accuracy—ensuring every interaction leaves your customers satisfied and confident in your business.</p>
+    <ul>
+      <li>💬 Live Chat, Phone & Email Support</li>
+      <li>📞 Callback Requests & Escalation Handling</li>
+      <li>🎫 Ticketing System Management (Zendesk, HelpScout, etc.)</li>
+      <li>📦 Order Inquiries, Refunds & Troubleshooting</li>
+      <li>🌟 Review Request & Reputation Monitoring</li>
+    </ul>
   </main>
   <footer>
     <p>&copy; 2025 Top Notch Virtual Assistance</p>
