--- a/executive-assistance.html
+++ b/executive-assistance.html
@@ -3,41 +3,32 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Top Notch Virtual Assistance provides remote executive support for busy professionals, startups, and business owners.">
-  <meta name="keywords" content="executive virtual assistant, remote admin, calendar scheduling, inbox management, professional support">
-  <meta name="author" content="Top Notch Solutions" />
-  <meta property="og:title" content="Top Notch Executive Support" />
-  <meta property="og:description" content="Reliable executive assistance from expert virtual professionals." />
-  <meta property="og:type" content="website" />
-  <meta property="og:image" content="images/TopNotch_Main2.png" />
-  <meta property="og:url" content="https://top-notch-solutions.com/executive.html" />
+  <meta name="description" content="Reliable executive virtual assistant services for busy professionals, founders, and business leaders. Stay organized, productive, and ahead of schedule.">
+  <meta name="keywords" content="executive assistant, virtual admin, inbox management, calendar scheduling, remote executive support, VA for executives">
+  <meta name="author" content="Top Notch Virtual Assistance" />
+  <meta property="og:title" content="Executive Virtual Assistant Services | Top Notch VA" />
+  <meta property="og:description" content="Streamline your operations with experienced virtual executive assistants. Calendar, inbox, travel & beyond.">
+  <meta property="og:image" content="images/executive-assistance.png" />
+  <meta property="og:url" content="https://top-notch-solutions.com/executive-assistance.html" />
   <link rel="stylesheet" href="css/styles.css" />
-  <link rel="icon" href="favicon.ico" type="image/x-icon" />
-  <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
-  <title>Executive Virtual Assistant | Top Notch Solutions</title>
+  <link rel="icon" href="images/favicon.ico" />
+  <title>Executive Assistance | Top Notch Virtual Assistance</title>
 </head>
 <body>
-  <header>
-    <img src="images/executive-assistance.png" alt="Top-Notch Logo" class="main-logo" />
-    <nav class="topnav">
-      <a href="index.html">Home</a>
-      <a href="executive.html">Executive Assistance</a>
-      <a href="customer.html">Customer Service</a>
-      <a href="marketing.html">Marketing Support</a>
-    </nav>
+  <header class="header-centered">
+    <img src="images/TopNotch_Main2.png" alt="Top Notch Logo" class="main-logo" />
   </header>
-  <main>
-    <section class="services">
-      <h3>Executive Assistance</h3>
-      <p>Our Executive Virtual Assistants provide premium administrative support, schedule and inbox management, travel coordination, and document handling—so you can lead with clarity and confidence.</p>
-      <ul>
-        <li>Calendar Management & Scheduling</li>
-        <li>Inbox Triage & Email Response</li>
-        <li>Travel Planning & Logistics</li>
-        <li>Meeting Prep, Notes, & Follow-ups</li>
-        <li>Presentation & Document Drafting</li>
-      </ul>
-    </section>
+  <main class="services">
+    <h2>Executive Virtual Assistant Services</h2>
+    <p>Our highly trained executive virtual assistants empower you to lead with clarity by managing your administrative workload—so you can focus on what matters most.</p>
+    <p>Whether you’re a solo founder, CEO, or overwhelmed entrepreneur, we help you reclaim your time and stay on top of every detail with grace and efficiency.</p>
+    <ul>
+      <li>📅 Calendar & Scheduling Coordination</li>
+      <li>📬 Inbox Management & Priority Response</li>
+      <li>✈️ Travel Booking & Itinerary Preparation</li>
+      <li>📝 Meeting Notes, Action Items & Follow-ups</li>
+      <li>📊 Presentation Formatting & Document Support</li>
+    </ul>
   </main>
   <footer>
     <p>&copy; 2025 Top Notch Virtual Assistance</p>
