--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Top Notch Virtual Assistance specializes in executive support, customer service, and marketing help for small businesses, startups, and busy professionals.">
   <meta name="keywords" content="virtual assistant, executive assistant, customer service, marketing support, remote admin, inbox management, calendar scheduling">
   <meta name="author" content="Top Notch Solutions">
@@ -15,38 +15,39 @@
   <link rel="icon" href="images/favicon.ico">
   <title>Top Notch Virtual Assistance</title>
 </head>
-
 <body>
+  <header class="header-centered">
+    <img src="images/TopNotch_Main2.png" alt="Top Notch Virtual Assistance Logo" class="main-logo" />
+    <nav class="topnav" style="margin-top: 1rem;">
+      <a href="index.html">Home</a>
+      <a href="executive-assistance.html">Executive Assistance</a>
+      <a href="CustomerAssist.html">Customer Service</a>
+      <a href="marketing-support.html">Marketing Support</a>
+    </nav>
+  </header>
 
-	<section class="services-section">
-	  <div class="service-card">
-		<img src="images/executive-assistance.png" alt="Executive Assistance Icon" class="service-icon">
-		<div class="service-title">Executive Assistance</div>
-		<p class="service-description">
-		  Efficient daily operations, professional correspondence, and administrative organization.
-		</p>
-		<a href="executive-assistance.html" class="learn-more">Learn more</a>
-	  </div>
-
-	  <div class="service-card">
-		<img src="images/CustomerAssist.png" alt="Customer Service Icon" class="service-icon">
-		<div class="service-title">Customer Service</div>
-		<p class="service-description">
-		  Client engagement, service coordination, and proactive problem-solving.
-		</p>
-		<a href="CustomerAssist.html" class="learn-more">Learn more</a>
-	  </div>
-
-	  <div class="service-card">
-		<img src="images/marketing.png" alt="Marketing Support Icon" class="service-icon">
-		<div class="service-title">Marketing Support</div>
-		<p class="service-description">
-		  Social media, email campaigns, content creation, and lead generation support tailored to your brand.
-		</p>
-		<a href="marketing-support.html" class="learn-more">Learn more</a>
-	  </div>
-	</section>
-
+  <main>
+    <h2 style="text-align: center; margin-top: 2rem; color: #222;">Our Services</h2>
+    <section class="services-section">
+      <div class="service-card">
+        <img src="images/executive-assistance.png" alt="Executive Assistance Icon" class="service-icon">
+        <div class="service-title">Executive Assistance</div>
+        <p class="service-description">Efficient daily operations, professional correspondence, and administrative organization.</p>
+        <a href="executive-assistance.html" class="learn-more">Learn more</a>
+      </div>
+      <div class="service-card">
+        <img src="images/CustomerAssist.png" alt="Customer Service Icon" class="service-icon">
+        <div class="service-title">Customer Service</div>
+        <p class="service-description">Client engagement, service coordination, and proactive problem-solving.</p>
+        <a href="CustomerAssist.html" class="learn-more">Learn more</a>
+      </div>
+      <div class="service-card">
+        <img src="images/marketing.png" alt="Marketing Support Icon" class="service-icon">
+        <div class="service-title">Marketing Support</div>
+        <p class="service-description">Social media, email campaigns, content creation, and lead generation support tailored to your brand.</p>
+        <a href="marketing-support.html" class="learn-more">Learn more</a>
+      </div>
+    </section>
 
     <section id="testimonials">
       <h2>What Our Clients Say</h2>
@@ -84,6 +85,5 @@
       <a href="https://linkedin.com/company/topnotchva" target="_blank">LinkedIn</a>
     </div>
   </footer>
-
 </body>
 </html>
