--- a/marketing-support.html
+++ b/marketing-support.html
@@ -3,41 +3,32 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Top Notch Virtual Assistance helps build your brand with consistent, creative, and affordable marketing services.">
-  <meta name="keywords" content="marketing virtual assistant, content creation, email campaigns, social media help, digital outreach">
-  <meta name="author" content="Top Notch Solutions" />
-  <meta property="og:title" content="Marketing Support Services | Top Notch VA" />
-  <meta property="og:description" content="Creative virtual assistants for branding, email, and content management." />
-  <meta property="og:type" content="website" />
-  <meta property="og:image" content="images/TopNotch_Main2.png" />
-  <meta property="og:url" content="https://top-notch-solutions.com/marketing.html" />
+  <meta name="description" content="Virtual marketing assistants to manage your brand presence, create content, and build leads through email, social media, and campaigns.">
+  <meta name="keywords" content="marketing assistant, social media VA, content marketing, email campaigns, Canva graphics, digital marketing support">
+  <meta name="author" content="Top Notch Virtual Assistance" />
+  <meta property="og:title" content="Marketing Support | Virtual Assistants for Branding" />
+  <meta property="og:description" content="Boost your visibility and leads with creative, reliable, and affordable marketing support tailored to your business.">
+  <meta property="og:image" content="images/marketing.png" />
+  <meta property="og:url" content="https://top-notch-solutions.com/marketing-support.html" />
   <link rel="stylesheet" href="css/styles.css" />
-  <link rel="icon" href="favicon.ico" type="image/x-icon" />
-  <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
-  <title>Marketing Virtual Assistant | Top Notch Solutions</title>
+  <link rel="icon" href="images/favicon.ico" />
+  <title>Marketing Support | Top Notch Virtual Assistance</title>
 </head>
 <body>
-  <header>
+  <header class="header-centered">
     <img src="images/TopNotch_Main2.png" alt="Top Notch Logo" class="main-logo" />
-    <nav class="topnav">
-      <a href="index.html">Home</a>
-      <a href="executive-assistance.html">Executive Assistance</a>
-      <a href="CustomerAssist.html">Customer Service</a>
-      <a href="marketing.html">Marketing Support</a>
-    </nav>
   </header>
-  <main>
-    <section class="services">
-      <h3>Marketing Support</h3>
-      <p>From social media content to email blasts, our marketing VAs help you stay consistent and creative while you grow your audience.</p>
-      <ul>
-        <li>Social Media Scheduling</li>
-        <li>Email Newsletter Campaigns</li>
-        <li>Blog Content Formatting</li>
-        <li>Basic Graphic Design via Canva</li>
-        <li>Brand Voice Audits & Edits</li>
-      </ul>
-    </section>
+  <main class="services">
+    <h2>Marketing Support Virtual Assistants</h2>
+    <p>Make your message stand out online with creative, consistent marketing services handled by our talented virtual assistants.</p>
+    <p>We help you grow awareness, generate leads, and communicate your brand story across platforms—all without the cost of hiring in-house.</p>
+    <ul>
+      <li>📣 Social Media Scheduling & Engagement</li>
+      <li>✉️ Email Campaign Setup & List Segmentation</li>
+      <li>📝 Blog & Newsletter Formatting</li>
+      <li>🎨 Canva Graphic Creation (Posts, Stories, Ads)</li>
+      <li>🔍 Brand Tone/Voice Audits & Messaging Cleanup</li>
+    </ul>
   </main>
   <footer>
     <p>&copy; 2025 Top Notch Virtual Assistance</p>
