--- a/thank-you.html
+++ b/thank-you.html
@@ -24,6 +24,6 @@
 <body>
   <h1>Thank You!</h1>
   <p>Your message has been sent. We'll be in touch shortly.</p>
-  <p><a href="/">Return to Home</a></p>
+  <p><a href="index.html">Return to Home</a></p>
 </body>
 </html>
