updated services pages

--- a/customer-service.html
+++ b/customer-service.html
@@ -16,20 +16,22 @@
 </head>
 <body>
   <header class="header-centered">
-    <img src="images/TopNotch_Main2.png" alt="Top Notch Logo" class="main-logo" />
+    <img src="images/CustomerAssist.png" alt="Customer Service Icon" class="main-logo" />
   </header>
+
   <main class="services">
     <h2>Virtual Customer Service Support</h2>
-    <p>Deliver five-star customer experiences at scale with our friendly and professional customer service virtual assistants.</p>
-    <p>We represent your brand with empathy, urgency, and accuracy—ensuring every interaction leaves your customers satisfied and confident in your business.</p>
+    <p>Deliver five-star customer experiences with our friendly and professional customer service virtual assistants.</p>
+    <p>We represent your brand with accuracy and empathy—ensuring every interaction builds trust, satisfaction, and loyalty.</p>
     <ul>
-      <li>💬 Live Chat, Phone & Email Support</li>
-      <li>📞 Callback Requests & Escalation Handling</li>
-      <li>🎫 Ticketing System Management (Zendesk, HelpScout, etc.)</li>
-      <li>📦 Order Inquiries, Refunds & Troubleshooting</li>
-      <li>🌟 Review Request & Reputation Monitoring</li>
+      <li>Live chat, phone, and email-based customer service</li>
+      <li>Callback request handling and issue escalation</li>
+      <li>CRM and ticketing system management</li>
+      <li>Order processing, returns, and support resolution</li>
+      <li>Customer feedback and review monitoring</li>
     </ul>
   </main>
+
   <footer>
     <p>&copy; 2025 Top Notch Virtual Assistance</p>
     <div class="social">
