--- a/executive-assistance.html
+++ b/executive-assistance.html
@@ -16,20 +16,22 @@
 </head>
 <body>
   <header class="header-centered">
-    <img src="images/TopNotch_Main2.png" alt="Top Notch Logo" class="main-logo" />
+    <img src="images/executive-assistance.png" alt="Executive Assistance Icon" class="main-logo" />
   </header>
+
   <main class="services">
     <h2>Executive Virtual Assistant Services</h2>
     <p>Our highly trained executive virtual assistants empower you to lead with clarity by managing your administrative workload—so you can focus on what matters most.</p>
-    <p>Whether you’re a solo founder, CEO, or overwhelmed entrepreneur, we help you reclaim your time and stay on top of every detail with grace and efficiency.</p>
+    <p>Whether you're a solo founder, CEO, or overwhelmed entrepreneur, we help you reclaim your time and stay on top of every detail with grace and efficiency.</p>
     <ul>
-      <li>📅 Calendar & Scheduling Coordination</li>
-      <li>📬 Inbox Management & Priority Response</li>
-      <li>✈️ Travel Booking & Itinerary Preparation</li>
-      <li>📝 Meeting Notes, Action Items & Follow-ups</li>
-      <li>📊 Presentation Formatting & Document Support</li>
+      <li>Calendar and schedule coordination</li>
+      <li>Email and inbox management</li>
+      <li>Travel planning and itinerary preparation</li>
+      <li>Meeting notes, task follow-ups, and reminders</li>
+      <li>Presentation and document formatting support</li>
     </ul>
   </main>
+
   <footer>
     <p>&copy; 2025 Top Notch Virtual Assistance</p>
     <div class="social">
