--- a/marketing-support.html
+++ b/marketing-support.html
@@ -16,20 +16,22 @@
 </head>
 <body>
   <header class="header-centered">
-    <img src="images/TopNotch_Main2.png" alt="Top Notch Logo" class="main-logo" />
+    <img src="images/marketing.png" alt="Marketing Support Icon" class="main-logo" />
   </header>
+
   <main class="services">
     <h2>Marketing Support Virtual Assistants</h2>
     <p>Make your message stand out online with creative, consistent marketing services handled by our talented virtual assistants.</p>
     <p>We help you grow awareness, generate leads, and communicate your brand story across platforms—all without the cost of hiring in-house.</p>
     <ul>
-      <li>📣 Social Media Scheduling & Engagement</li>
-      <li>✉️ Email Campaign Setup & List Segmentation</li>
-      <li>📝 Blog & Newsletter Formatting</li>
-      <li>🎨 Canva Graphic Creation (Posts, Stories, Ads)</li>
-      <li>🔍 Brand Tone/Voice Audits & Messaging Cleanup</li>
+      <li>Social media scheduling and post engagement</li>
+      <li>Email campaign setup, formatting, and delivery</li>
+      <li>Blog and newsletter content preparation</li>
+      <li>Graphic design assistance using Canva</li>
+      <li>Brand tone and voice cleanup and edits</li>
     </ul>
   </main>
+
   <footer>
     <p>&copy; 2025 Top Notch Virtual Assistance</p>
     <div class="social">
