updated page and png names for proper rendering

--- a/customer-service.html
+++ b/customer-service.html
@@ -8,15 +8,15 @@
   <meta name="author" content="Top Notch Virtual Assistance" />
   <meta property="og:title" content="Customer Service Virtual Assistants | Top Notch VA" />
   <meta property="og:description" content="Friendly, fast, and professional virtual support that keeps your customers happy and loyal.">
-  <meta property="og:image" content="images/CustomerAssist.png" />
-  <meta property="og:url" content="https://top-notch-solutions.com/CustomerAssist.html" />
+  <meta property="og:image" content="images/customer-service.png" />
+  <meta property="og:url" content="https://top-notch-solutions.com/customer-service.html" />
   <link rel="stylesheet" href="css/styles.css" />
   <link rel="icon" href="images/favicon.ico" />
   <title>Customer Service | Top Notch Virtual Assistance</title>
 </head>
 <body>
   <header class="header-centered">
-    <img src="images/CustomerAssist.png" alt="Customer Service Icon" class="main-logo" />
+    <img src="images/customer-service.png" alt="Customer Service Icon" class="main-logo" />
   </header>
 
   <main class="services">
