--- a/executive-assistance.html
+++ b/executive-assistance.html
@@ -21,14 +21,14 @@
 
   <main class="services">
     <h2>Executive Virtual Assistant Services</h2>
-    <p>Our highly trained executive virtual assistants empower you to lead with clarity by managing your administrative workload—so you can focus on what matters most.</p>
-    <p>Whether you're a solo founder, CEO, or overwhelmed entrepreneur, we help you reclaim your time and stay on top of every detail with grace and efficiency.</p>
+    <p>Our executive virtual assistants empower you to lead with clarity by handling your administrative workload—so you can stay focused on your goals.</p>
+    <p>Whether you're a solo founder, CEO, or managing multiple projects, we help you stay organized and efficient every step of the way.</p>
     <ul>
-      <li>Calendar and schedule coordination</li>
+      <li>Calendar and scheduling coordination</li>
       <li>Email and inbox management</li>
-      <li>Travel planning and itinerary preparation</li>
-      <li>Meeting notes, task follow-ups, and reminders</li>
-      <li>Presentation and document formatting support</li>
+      <li>Travel booking and itinerary planning</li>
+      <li>Meeting preparation, notes, and follow-ups</li>
+      <li>Presentation formatting and documentation support</li>
     </ul>
   </main>
 
