--- a/index.html
+++ b/index.html
@@ -10,25 +10,24 @@
   <meta property="og:description" content="Reliable virtual assistant services for executives, entrepreneurs, and remote teams.">
   <meta property="og:type" content="website">
   <meta property="og:image" content="images/TopNotch_Main2.png">
-  <meta property="og:url" content="https://top-notch-solutions.com">
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="icon" href="images/favicon.ico">
+  <meta property="og:url" content="https://top-notch-solutions.com/">
+  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="icon" href="images/favicon.ico" />
   <title>Top Notch Virtual Assistance</title>
 </head>
 <body>
   <header class="header-centered">
-    <img src="images/TopNotch_Main2.png" alt="Top Notch Virtual Assistance Logo" class="main-logo" />
+    <img src="images/TopNotch_Main2.png" alt="Top Notch Logo" class="main-logo" />
     <div class="hamburger-header">
       <button class="hamburger-btn" onclick="toggleMenu()">☰ Menu</button>
       <nav class="hamburger-nav" id="hamburgerMenu">
         <a href="index.html">Home</a>
         <a href="executive-assistance.html">Executive Assistance</a>
-        <a href="CustomerAssist.html">Customer Service</a>
+        <a href="customer-service.html">Customer Service</a>
         <a href="marketing-support.html">Marketing Support</a>
       </nav>
     </div>
   </header>
-
   <main>
     <h2 style="text-align: center; margin-top: 2rem; color: #222;">Our Services</h2>
     <section class="services-section">
@@ -39,56 +38,22 @@
         <a href="executive-assistance.html" class="learn-more">Learn more</a>
       </div>
       <div class="service-card">
-        <img src="images/CustomerAssist.png" alt="Customer Service Icon" class="service-icon">
+        <img src="images/customer-service.png" alt="Customer Service Icon" class="service-icon">
         <div class="service-title">Customer Service</div>
         <p class="service-description">Client engagement, service coordination, and proactive problem-solving.</p>
-        <a href="CustomerAssist.html" class="learn-more">Learn more</a>
+        <a href="customer-service.html" class="learn-more">Learn more</a>
       </div>
       <div class="service-card">
-        <img src="images/marketing.png" alt="Marketing Support Icon" class="service-icon">
+        <img src="images/marketing-support.png" alt="Marketing Support Icon" class="service-icon">
         <div class="service-title">Marketing Support</div>
         <p class="service-description">Social media, email campaigns, content creation, and lead generation support tailored to your brand.</p>
         <a href="marketing-support.html" class="learn-more">Learn more</a>
       </div>
     </section>
-
-    <section id="testimonials">
-      <h2>What Our Clients Say</h2>
-      <div class="testimonial">
-        <p>“Top Notch Virtual Assistance helped me take control of my schedule — truly a game-changer!”</p>
-        <h4>- Sarah D., Small Business Owner</h4>
-      </div>
-      <div class="testimonial">
-        <p>“Excellent communication and reliable service. I highly recommend them!”</p>
-        <h4>- Mike L., Marketing Director</h4>
-      </div>
-      <div class="testimonial">
-        <p>“Their marketing support and quick turnaround helped us launch faster than we imagined.”</p>
-        <h4>- Lisa B., Startup Co-Founder</h4>
-      </div>
-    </section>
-
-    <section id="contact" class="contact-section">
-      <h2>Contact Us</h2>
-      <form action="https://formsubmit.co/lmoore0510@gmail.com" method="POST" class="contact-form">
-        <input type="hidden" name="_redirect" value="https://topnotchsolutions.github.io/thank-you.html" />
-        <input type="text" name="name" placeholder="Your Name" required />
-        <input type="email" name="email" placeholder="Your Email" required />
-        <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-        <button type="submit">Send</button>
-      </form>
-    </section>
   </main>
-
   <footer>
     <p>&copy; 2025 Top Notch Virtual Assistance</p>
-    <div class="social">
-      <a href="https://facebook.com/TopNotchVA" target="_blank">Facebook</a> |
-      <a href="https://instagram.com/TopNotchVA" target="_blank">Instagram</a> |
-      <a href="https://linkedin.com/company/topnotchva" target="_blank">LinkedIn</a>
-    </div>
   </footer>
-
   <script>
     function toggleMenu() {
       document.getElementById("hamburgerMenu").classList.toggle("show");
