--- a/marketing-support.html
+++ b/marketing-support.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Top Notch Virtual Assistance" />
   <meta property="og:title" content="Marketing Support | Virtual Assistants for Branding" />
   <meta property="og:description" content="Boost your visibility and leads with creative, reliable, and affordable marketing support tailored to your business.">
-  <meta property="og:image" content="images/marketing.png" />
+  <meta property="og:image" content="images/marketing-support.png" />
   <meta property="og:url" content="https://top-notch-solutions.com/marketing-support.html" />
   <link rel="stylesheet" href="css/styles.css" />
   <link rel="icon" href="images/favicon.ico" />
@@ -16,7 +16,7 @@
 </head>
 <body>
   <header class="header-centered">
-    <img src="images/marketing.png" alt="Marketing Support Icon" class="main-logo" />
+    <img src="images/marketing-support.png" alt="Marketing Support Icon" class="main-logo" />
   </header>
 
   <main class="services">
