final updates made to services

--- a/customer-service.html
+++ b/customer-service.html
@@ -15,9 +15,18 @@
   <title>Customer Service | Top Notch Virtual Assistance</title>
 </head>
 <body>
-  <header class="header-centered">
-    <img src="images/customer-service.png" alt="Customer Service Icon" class="main-logo" />
-  </header>
+	<header class="header-centered">
+	  <img src="images/[PAGE-SPECIFIC-ICON].png" alt="Page Icon" class="main-logo" />
+	  <div class="hamburger-header">
+		<button class="hamburger-btn" onclick="toggleMenu()">☰ Menu</button>
+		<nav class="hamburger-nav" id="hamburgerMenu">
+		  <a href="index.html">Home</a>
+		  <a href="executive-assistance.html">Executive Assistance</a>
+		  <a href="customer-service.html">Customer Service</a>
+		  <a href="marketing-support.html">Marketing Support</a>
+		</nav>
+	  </div>
+	</header>
 
   <main class="services">
     <h2>Virtual Customer Service Support</h2>
