--- a/marketing-support.html
+++ b/marketing-support.html
@@ -15,12 +15,22 @@
   <title>Marketing Support | Top Notch Virtual Assistance</title>
 </head>
 <body>
-  <header class="header-centered">
-    <img src="images/marketing-support.png" alt="Marketing Support Icon" class="main-logo" />
-  </header>
+	<header class="header-centered">
+	  <img src="images/[PAGE-SPECIFIC-ICON].png" alt="Page Icon" class="main-logo" />
+	  <div class="hamburger-header">
+		<button class="hamburger-btn" onclick="toggleMenu()">☰ Menu</button>
+		<nav class="hamburger-nav" id="hamburgerMenu">
+		  <a href="index.html">Home</a>
+		  <a href="executive-assistance.html">Executive Assistance</a>
+		  <a href="customer-service.html">Customer Service</a>
+		  <a href="marketing-support.html">Marketing Support</a>
+		</nav>
+	  </div>
+	</header>
+
 
   <main class="services">
-    <h2>Marketing Support Virtual Assistants</h2>
+    <h2>Virtual Marketing Support Assistance</h2>
     <p>Make your message stand out online with creative, consistent marketing services handled by our talented virtual assistants.</p>
     <p>We help you grow awareness, generate leads, and communicate your brand story across platforms—all without the cost of hiring in-house.</p>
     <ul>
