--- a/executive-assistance.html
+++ b/executive-assistance.html
@@ -15,12 +15,21 @@
   <title>Executive Assistance | Top Notch Virtual Assistance</title>
 </head>
 <body>
-  <header class="header-centered">
-    <img src="images/executive-assistance.png" alt="Executive Assistance Icon" class="main-logo" />
-  </header>
+	<header class="header-centered">
+	  <img src="images/[PAGE-SPECIFIC-ICON].png" alt="Page Icon" class="main-logo" />
+	  <div class="hamburger-header">
+		<button class="hamburger-btn" onclick="toggleMenu()">☰ Menu</button>
+		<nav class="hamburger-nav" id="hamburgerMenu">
+		  <a href="index.html">Home</a>
+		  <a href="executive-assistance.html">Executive Assistance</a>
+		  <a href="customer-service.html">Customer Service</a>
+		  <a href="marketing-support.html">Marketing Support</a>
+		</nav>
+	  </div>
+	</header>
 
   <main class="services">
-    <h2>Executive Virtual Assistant Services</h2>
+    <h2>Virtual Executive Assistance Services</h2>
     <p>Our executive virtual assistants empower you to lead with clarity by handling your administrative workload—so you can stay focused on your goals.</p>
     <p>Whether you're a solo founder, CEO, or managing multiple projects, we help you stay organized and efficient every step of the way.</p>
     <ul>
