updated services pages

--- a/customer-service.html
+++ b/customer-service.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 	<header class="header-centered">
-	  <img src="images/[PAGE-SPECIFIC-ICON].png" alt="Page Icon" class="main-logo" />
+	  <img src="images/TopNotch_Main2.png" alt="Page Icon" class="main-logo" />
 	  <div class="hamburger-header">
 		<button class="hamburger-btn" onclick="toggleMenu()">☰ Menu</button>
 		<nav class="hamburger-nav" id="hamburgerMenu">
@@ -49,5 +49,9 @@
       <a href="https://linkedin.com/company/topnotchva" target="_blank">LinkedIn</a>
     </div>
   </footer>
+    <script>
+  function toggleMenu() {
+    document.getElementById("hamburgerMenu").classList.toggle("show");
+  }
 </body>
 </html>
